支持通过 .env 与 YAML 切换本地模型
将模型与 Qdrant 配置改为由环境变量驱动，并接入 vLLM 的 OpenAI 兼容装配，便于在 Ollama 与 vLLM 之间按配置切换。

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>